inital commit, created basic structure of HTML page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Document</title>
+    <title>Life Hacks</title>
 </head>
 <body>
+    <section id="header-container">
+        <header id="logo">
+            <h1>Life-hacks!</h1>
+        </header>
+        <nav id="nav-bar">
+            <ul id="list">
+                <li class="list-itmes">Home</li>
+                <li class="list-itmes">Life Hacks</li>
+                <li class="list-itmes">Feedback</li>
+            </ul>
+        </nav>
+    </section>
+    <section id="hack-image-container">
+        <div id="hack-image">
+        </div>
+        <div id="hack-cover-text">
+            <!-- <h2>Life-Hacks!</h2>
+            <p>Learn some usefull lifehacks :D</p>  commented out because of border issues* --> 
+        </div>
+    </section>
+    <section id="life-hack-container">
+        <div id="life-hack1"></div>
+        <div id="life-hack2"></div>
+        <div id="life-hack3"></div>
+        <div id="life-hack4"></div>
+    </section>
+    <section id="social-media-container">
+        <!-- social media icons and links will go here -->
+    </section>
 </body>
 </html> 
