added custom fonts

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         </header>
         <nav id="nav-bar">
             <ul id="list">
-                <li class="list-itmes">Home</li>
-                <li class="list-itmes">Life Hacks</li>
-                <li class="list-itmes">Feedback</li>
+                <li class="list-itmes"><a href="index.html">Home</a></li>
+                <li class="list-itmes"><a href="#">Life Hacks</a></li>
+                <li class="list-itmes"><a href="#">Feedback</a></li>
             </ul>
         </nav>
     </section>
@@ -37,5 +37,8 @@
     <section id="social-media-container">
         <!-- social media icons and links will go here -->
     </section>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
 </body>
 </html> 
