finished stylign nav bar and logo

--- a/index.html
+++ b/index.html
@@ -8,18 +8,14 @@
     <title>Life Hacks</title>
 </head>
 <body>
-    <section id="header-container">
-        <header id="logo">
-            <h1>Life-hacks!</h1>
-        </header>
-        <nav id="nav-bar">
-            <ul id="list">
-                <li class="list-itmes"><a href="index.html">Home</a></li>
-                <li class="list-itmes"><a href="#">Life Hacks</a></li>
-                <li class="list-itmes"><a href="#">Feedback</a></li>
-            </ul>
-        </nav>
-    </section>
+    <nav id="navbar">
+        <h1 id="logo">Life-Hacks</h1>
+        <div id="navSection">
+            <a href="index.html"><li class="buttonDesign">Home</li></a>
+            <a href="#"><li class="buttonDesign">Life Hacks</li></a>
+            <a href="#"><li class="buttonDesign">Feedback</li></a>
+        </div>
+    </nav>
     <section id="hack-image-container">
         <div id="hack-image">
         </div>
