finished styling hack image and cover text section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div id="hack-image">
         </div>
         <div id="hack-cover-text">
-            <!-- <h2>Life-Hacks!</h2>
-            <p>Learn some usefull lifehacks :D</p>  commented out because of border issues* --> 
+            <h2>Life-Hacks!</h2>
+            <p>Learn some usefull lifehacks :D</p>  
         </div>
     </section>
     <section id="life-hack-container">
