finished life hack content section with styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id="logo">Life-Hacks</h1>
         <div id="navSection">
             <a href="index.html"><li class="buttonDesign">Home</li></a>
-            <a href="#"><li class="buttonDesign">Life Hacks</li></a>
+            <a href="#hack-title"><li class="buttonDesign">Life Hacks</li></a>
             <a href="#"><li class="buttonDesign">Feedback</li></a>
         </div>
     </nav>
@@ -21,14 +21,62 @@
         </div>
         <div id="hack-cover-text">
             <h2>Life-Hacks!</h2>
-            <p>Learn some usefull lifehacks :D</p>  
+            <p>Learn some usefull lifehacks :D (for programmers)</p>  
         </div>
     </section>
     <section id="life-hack-container">
-        <div id="life-hack1"></div>
-        <div id="life-hack2"></div>
-        <div id="life-hack3"></div>
-        <div id="life-hack4"></div>
+        <h2 id="hack-title">3 simple life hacks!</h2>
+        <div id="life-hack1" class="life-hack-temp">
+            <div id="left-hack1" class="left-hack-text ">
+                <h3>#1 Keep your tabs clean with ONETAB</h3>
+                <p>Ever feel like you're building tabs constantly while doing a Project?</p>
+            </div>
+            <div>
+                <div class="hack-img-border">
+                    <div id="hack-img">
+                </div>
+            </div>
+            </div>
+            <div class="right-hack-text">
+                <p>A Chrome extention called ONETAB allows you to keep all your tabs in one page with ONE simple click!</p>
+                <p>Bonus: Saves up to 95% memory</p>
+            </div>
+        </div>
+        <div id="life-hack2" class="life-hack-temp">
+            <div class="left-hack-text ">
+                <h3>#2 Use GITHUB as SOTRAGE</h3>
+                <p>Did you know you can store more then just code on Github, all types of documents like files, photos and ect.</p>
+            </div>
+            <div>
+                <div class="hack-img-border">
+                    <div id="hack2-img">
+                </div>
+            </div>
+            </div>
+            <div class="right-hack-text">
+                <p>However there are some limitations that follow:</p>
+                <ul>
+                    <li>100GB storage per repository</li>
+                    <li>100MB per individual file</li>
+                </ul>
+            </div>
+        </div>
+        <div id="life-hack3" class="life-hack-temp">
+            <div class="left-hack-text ">
+                <h3>#3 Eat the frog</h3>
+                <p>No this does not mean literally eat a frog. As developers we tend to do the easiest things first which tends to be unproductive.</p>
+            </div>
+            <div>
+                <div class="hack-img-border">
+                    <div id="hack3-img">
+                </div>
+            </div>
+            </div>
+            <div class="right-hack-text">
+                <p>what you want to do is use your brainpower for the hardest task at hand.</p>
+                <p>leave the easier task for the end</p>
+            </div>
+        </div>
     </section>
     <section id="social-media-container">
         <!-- social media icons and links will go here -->
