finished adding social media contaienr and styling

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Bonus: Saves up to 95% memory</p>
             </div>
         </div>
-        <div id="life-hack2" class="life-hack-temp">
+        <div class="life-hack-temp">
             <div class="left-hack-text ">
                 <h3>#2 Use GITHUB as SOTRAGE</h3>
                 <p>Did you know you can store more then just code on Github, all types of documents like files, photos and ect.</p>
@@ -79,7 +79,12 @@
         </div>
     </section>
     <section id="social-media-container">
-        <!-- social media icons and links will go here -->
+        <ul id="social-icons">
+            <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+        </ul>
     </section>
 
     <!-- font awesome script -->
