finished styling and adding main format to feedback page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="navSection">
             <a href="index.html"><li class="buttonDesign">Home</li></a>
             <a href="#hack-title"><li class="buttonDesign">Life Hacks</li></a>
-            <a href="#"><li class="buttonDesign">Feedback</li></a>
+            <a href="feedback.html"><li class="buttonDesign">Feedback</li></a>
         </div>
     </nav>
     <section id="hack-image-container">
@@ -86,7 +86,6 @@
             <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
     </section>
-
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
 </body>
