fixed bugs within html and css validator

--- a/feedback.html
+++ b/feedback.html
@@ -11,9 +11,9 @@
     <nav id="navbar">
         <h1 id="logo">Life-Hacks</h1>
         <div id="navSection">
-            <a href="index.html"><li class="buttonDesign">Home</li></a>
-            <a href="index.html"><li class="buttonDesign">Life Hacks</li></a>
-            <a href="feedback.html"><li class="buttonDesign">Feedback</li></a>
+            <a href="index.html"><p class="buttonDesign">Home</p></a>
+            <a href="index.html"><p class="buttonDesign">Life Hacks</p></a>
+            <a href="feedback.html"><p class="buttonDesign">Feedback</p></a>
         </div>
     </nav>
 
@@ -35,12 +35,15 @@
     </div>
 
     <section id="social-media-container">
+        <h2 id="social-title">Social Media</h2>
         <ul id="social-icons">
             <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
             <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-        <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
     </section>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
 </body>
