--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav id="navbar">
         <h1 id="logo">Life-Hacks</h1>
         <div id="navSection">
-            <a href="index.html"><li class="buttonDesign">Home</li></a>
-            <a href="#hack-title"><li class="buttonDesign">Life Hacks</li></a>
-            <a href="feedback.html"><li class="buttonDesign">Feedback</li></a>
+            <a href="index.html"><p class="buttonDesign">Home</p></a>
+            <a href="#hack-title"><p class="buttonDesign">Life Hacks</p></a>
+            <a href="feedback.html"><p class="buttonDesign">Feedback</p></a>
         </div>
     </nav>
     <section id="hack-image-container">
@@ -79,6 +79,7 @@
         </div>
     </section>
     <section id="social-media-container">
+        <h2 id="social-title">Social Media</h2>
         <ul id="social-icons">
             <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
             <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
