--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
             </div>
             <div>
                 <div class="hack-img-border">
-                    <div id="hack-img">
+                    <div id="hack-img"></div>
                 </div>
-            </div>
             </div>
             <div class="right-hack-text">
                 <p>A Chrome extention called ONETAB allows you to keep all your tabs in one page with ONE simple click!</p>
