added aria labels to images to help accessibilty users and added to readme

--- a/feedback.html
+++ b/feedback.html
@@ -11,9 +11,9 @@
     <nav id="navbar">
         <h1 id="logo">Life-Hacks</h1>
         <div id="navSection">
-            <a href="index.html"><p class="buttonDesign">Home</p></a>
-            <a href="index.html"><p class="buttonDesign">Life Hacks</p></a>
-            <a href="feedback.html"><p class="buttonDesign">Feedback</p></a>
+            <a href="index.html" role="button" aria-label="This button takes you to the home page" ><p class="buttonDesign">Home</p></a>
+            <a href="index.html" role="button" aria-label="This button will take you to the life hacks section where you can read some life hacks"><p class="buttonDesign">Life Hacks</p></a>
+            <a href="feedback.html" role="button" aria-label="This button will take you to the feedback page"><p class="buttonDesign">Feedback</p></a>
         </div>
     </nav>
 
@@ -34,15 +34,15 @@
         </form>
     </div>
 
-    <section id="social-media-container">
+    <footer id="social-media-container">
         <h2 id="social-title">Social Media</h2>
         <ul id="social-icons">
-            <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank" aria-label="This icon takes you to our instagram page"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://facebook.com" target="_blank" aria-label="This icon takes you to our facebook page"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://youtube.com" target="_blank" aria-label="This icon takes you to our youtube page"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank" aria-label="This icon takes you to our twitter page"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-    </section>
+    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
