--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <nav id="navbar">
         <h1 id="logo">Life-Hacks</h1>
         <div id="navSection">
-            <a href="index.html"><p class="buttonDesign">Home</p></a>
-            <a href="#hack-title"><p class="buttonDesign">Life Hacks</p></a>
-            <a href="feedback.html"><p class="buttonDesign">Feedback</p></a>
+            <a href="index.html" role="button" aria-label="This button takes you to the home page"><p class="buttonDesign">Home</p></a>
+            <a href="#hack-title" role="button" aria-label="This button will take you to the life hacks section where you can read some life hacks"><p class="buttonDesign">Life Hacks</p></a>
+            <a href="feedback.html" role="button" aria-label="This button will take you to the feedback page"><p class="buttonDesign">Feedback</p></a>
         </div>
     </nav>
     <section id="hack-image-container">
-        <div id="hack-image">
+        <div id="main-hack-image" role="img" aria-label="Background image of computer screen with code on it and glasses infront">
         </div>
         <div id="hack-cover-text">
             <h2>Life-Hacks!</h2>
@@ -33,7 +33,7 @@
             </div>
             <div>
                 <div class="hack-img-border">
-                    <div id="hack-img"></div>
+                    <div id="hack-img" role="img" aria-label="Onetabs logo and a 4 and a 1/2 star rating"></div>
                 </div>
             </div>
             <div class="right-hack-text">
@@ -48,7 +48,7 @@
             </div>
             <div>
                 <div class="hack-img-border">
-                    <div id="hack2-img">
+                    <div id="hack2-img" role="img" aria-label="github logo">
                 </div>
             </div>
             </div>
@@ -67,7 +67,7 @@
             </div>
             <div>
                 <div class="hack-img-border">
-                    <div id="hack3-img">
+                    <div id="hack3-img" role="img" aria-label="cartoon frog">
                 </div>
             </div>
             </div>
@@ -77,15 +77,15 @@
             </div>
         </div>
     </section>
-    <section id="social-media-container">
+    <footer id="social-media-container">
         <h2 id="social-title">Social Media</h2>
         <ul id="social-icons">
-            <li><a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
-            <li><a href="https://youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
-            <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank" aria-label="This icon takes you to our instagram page"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://facebook.com" target="_blank" aria-label="This icon takes you to our facebook page"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://youtube.com" target="_blank" aria-label="This icon takes you to our youtube page"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank" aria-label="This icon takes you to our twitter page"><i class="fa-brands fa-twitter"></i></a></li>
         </ul>
-    </section>
+    </footer>
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/adbe32f668.js" crossorigin="anonymous"></script>
 </body>
