added meta data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <meta name="description" content="Life hacks for programmers to make life easier and make thier programming more efficient">
+    <meta name="keywords" content="life hacks, programming tips, programming, coding, tips, programming tips">
+    <meta name="author" content="Ibrahim for Code Institute Portfolio Project 1">
     <title>Life Hacks</title>
 </head>
 <body>
