added to markdown

--- a/feedback.html
+++ b/feedback.html
@@ -19,6 +19,7 @@
 
     <div id="main-box">
         <form id="survey-form" method="POST" action="https://formdump.codeinstitute.net/">
+            <h2 id="form-title">Feedback</h2>
             <label for="name" class="label-style">Name</label>
             <input type="text" placeholder="Enter your name" id="name" class="the-inputs" name="name" required >
         
