added to readme and changed feedback page to contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -13,13 +13,13 @@
         <div id="navSection">
             <a href="index.html" role="button" aria-label="This button takes you to the home page" ><p class="buttonDesign">Home</p></a>
             <a href="index.html" role="button" aria-label="This button will take you to the life hacks section where you can read some life hacks"><p class="buttonDesign">Life Hacks</p></a>
-            <a href="feedback.html" role="button" aria-label="This button will take you to the feedback page"><p class="buttonDesign">Feedback</p></a>
+            <a href="contact-us.html" role="button" aria-label="This button will take you to the contact us page"><p class="buttonDesign">Contact us</p></a>
         </div>
     </nav>
 
     <div id="main-box">
         <form id="survey-form" method="POST" action="https://formdump.codeinstitute.net/">
-            <h2 id="form-title">Feedback</h2>
+            <h2 id="form-title">Contact Us</h2>
             <label for="name" class="label-style">Name</label>
             <input type="text" placeholder="Enter your name" id="name" class="the-inputs" name="name" required >
         
