--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="navSection">
             <a href="index.html" role="button" aria-label="This button takes you to the home page"><p class="buttonDesign">Home</p></a>
             <a href="#hack-title" role="button" aria-label="This button will take you to the life hacks section where you can read some life hacks"><p class="buttonDesign">Life Hacks</p></a>
-            <a href="feedback.html" role="button" aria-label="This button will take you to the feedback page"><p class="buttonDesign">Feedback</p></a>
+            <a href="contact-us.html" role="button" aria-label="This button will take you to the contact us page"><p class="buttonDesign">Contact-Us</p></a>
         </div>
     </nav>
     <section id="hack-image-container">
